--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,19 +1,49 @@
-$whitesmoke-color: #eef1ec;
-$lightblue-color: #c1d3d2;
-$aquamarine-color:  #83a7a5;
 $lightgreen-color: #6fb048;
-$dark-teal-color:  #0f5f5c;
+$dark-heading-color: rgb(15, 95, 92);
 $header-gradient-color: rgba(127, 127, 127, 0.8);
 $main-bg-light-color: #fff;
-$second-bg-darker-color: $whitesmoke-color;
-$section-description-color: $aquamarine-color;
-$testimonial-description-color: $aquamarine-color;
-$testimonial-position-font-color: $aquamarine-color;
+$masthead-inset-shadow: rgba(15,95,92,0.8);
+$description-font-color: rgb(131, 167, 165);
+$dark-theme-font-color: rgb(131, 167, 165);
+$button-font-color: #fff;
+$border-adaptive-navigation: #fff;
+$hover-transparent-button-border: #fff;
+$hover-transparent-button-font: #fff;
+$header-content-font-color: #fff;
+$navigation-light-item-hover-font: #fff;
+$navigation-adaptive-border: #fff;
+$navigation-adaptive-dark-font: #fff;
+$masthead-header-font: #fff;
+$masthead-description-font: #fff;
+$about-us-header-font: #fff;
+$plan-bg-color: #fff;
+$plan-hover-header: #fff;
+$plan-hover-price: #fff;
+$plan-hover-duration: #fff;
+$plan-hover-options: #fff;
+$plan-hover-select-button: #fff;
+$plan-select-button-border-hover: #fff;
+$call-to-action-header-light: #fff;
+$call-to-action-description-light: #fff;
+$socials-items-font: #fff;
+$feedback-form-item-bg: #fff;
+$headquarter-bg: #fff;
+$dark-green-btn-bg: rgb(73, 115, 47);
+$second-bg-darker-color: #eef1ec;
+$section-description-color: #83a7a5;
+$testimonial-description-color: #83a7a5;
+$testimonial-position-font-color: #83a7a5;
+$headquarter-address-font: #83a7a5;
+$headquarter-phone-number-font: #83a7a5;
+$plan-hover-bg: #83a7a5;
+$select-plan-hover-btn-bg: #83a7a5;
+$feedback-form-item-color: #83a7a5;
+$headquarter-border: #c1d3d2;
+$feedback-form-item-border: #c1d3d2;
 $learn-more-button-bg-color: $lightgreen-color;
 $testimonial-author-font-color: $lightgreen-color;
 $best-features-icon-color: $lightgreen-color;
 $section-underline-color: $lightgreen-color;
-$section-title-color: $dark-teal-color;
 $twitter-bg-color: #55acee;
 $facebook-bg-color: #3b5998;
 $instagram-bg-color: #3f729b;
