--- a/src/pages/pricing.pug
+++ b/src/pages/pricing.pug
@@ -83,6 +83,9 @@ body
                     .addons__item Fringilla Mattis
                     .addons__item Integer posuere
                     .addons__item Nullam quis risus eget urna mollis 
+                    .addons__item Lorem ipsum dolor sit amet.
+                    .addons__item Lorem ipsum dolor sit amet.
+                    .addons__item Lorem ipsum dolor sit amet.
     section.contact-us
         .container
             .contact-us__content
