--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,3 @@
-$lightgreen-color: #6fb048;
 $dark-heading-color: rgb(15, 95, 92);
 $header-gradient-color: rgba(127, 127, 127, 0.8);
 $main-bg-light-color: #fff;
@@ -40,10 +39,11 @@ $select-plan-hover-btn-bg: #83a7a5;
 $feedback-form-item-color: #83a7a5;
 $headquarter-border: #c1d3d2;
 $feedback-form-item-border: #c1d3d2;
-$learn-more-button-bg-color: $lightgreen-color;
-$testimonial-author-font-color: $lightgreen-color;
-$best-features-icon-color: $lightgreen-color;
-$section-underline-color: $lightgreen-color;
+$learn-more-button-bg-color: #6fb048;
+$testimonial-author-font-color: #6fb048;
+$best-features-icon-color: #6fb048;
+$section-underline-color: #6fb048;
+$lightgreen-color: #6fb048;
 $twitter-bg-color: #55acee;
 $facebook-bg-color: #3b5998;
 $instagram-bg-color: #3f729b;
